0.12.4
	+ Bugfix. Check and correct if there is a user or group with a wrong SID.
	It's possible to run into that scenarion depending when the user/group is
	created
0.12.3
	+ Add configuration variable to enable/disable quota support
	  as it might be really slow if we have many users
0.12.2
	+ Restore group share names when restoring a backup
0.12.1
	+ Leave Logon Home empty, as Logon Home = "" as stated by smb.conf
	documentation doesn't seem to work
	+ Make sure  workgroup and netbios names are different
0.12
	+ Add help to model fields
	+ Fix typo in defaultEnabledValue. Now shares are enabled by default.
	+ Fix typo in administrator label
	+ Mark shares strings to translate
	+ Use eBox OID number in LDAP schemas
	+ Do not use shares that don't have permission for any user or group
	+ Remove deprecated printer admin configuration key in smb.conf.mas
	+ Enable dns proxy in smb.conf.mas
0.11.103
	+ Bugfix. Add and use EBox::Samba::Types::Select to avoid 
	  issues with the options cache
0.11.102
	+ Extend functinality to add custom shares and not only one per-group:
		- Any share within the file system
		- Any share automatically created under /home/samba/shares
		- Fine-grained access to the share: read-only, read and write,
		  administrator, per user and per group.
	+ Set editable attribute to 1 in User field. To comply with
	  what the type expects and avoid warnings

0.11.101
	+ New release
0.11.100
	+ Change slapd.conf ownership to module users
	+ Fix typos
	+ onInstall() functionality moved to migration script 
0.11.99
	+ Allow others to read contents from users home directory to
	publish HTML
0.11
	+ New release
0.10.99
	+ New release
0.10
	+ Create directory with 0770
	+ Add users to Domain Users group
0.9.100
	+ New release
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ Add ebox backup directory as a shared resource to download/upload
	  files
	+ Create smbldap_bind.conf which contains password with mask 0600
0.9.1
	+ New release
0.9